{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 24083,
  "lineage": "7edd5c2a-de5c-76ad-f1bf-16014f0d7132",
  "resources": [
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/app/my-application-load-balancer/8e664c77a682801f",
            "arn_suffix": "app/my-application-load-balancer/8e664c77a682801f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-application-load-balancer-1024570911.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/app/my-application-load-balancer/8e664c77a682801f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-application-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07d0231dd33eabf8a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a2bf78d28978bb4"
              },
              {
                "subnet_id": "subnet-02a1305748bc1c895"
              },
              {
                "subnet_id": "subnet-09d643feae001726a"
              }
            ],
            "subnets": [
              "subnet-00a2bf78d28978bb4",
              "subnet-02a1305748bc1c895",
              "subnet-09d643feae001726a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-alb",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-alb",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a2220c0ba1a8e843",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "No matching rules found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/app/my-application-load-balancer/8e664c77a682801f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:473154593366:certificate/9f8af28e-ad1d-4cbc-9863-3e593de80166",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "No matching rules found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/app/my-application-load-balancer/8e664c77a682801f",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "jenkins_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-master-http-tg/4bb11c5c960d6b3d",
                        "weight": 100
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/23965e035e2361e5",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "jenkins.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/23965e035e2361e5",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.http",
            "module.application_load_balancer.aws_lb_target_group.jenkins_master_http",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "jenkins_https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-master-https-tg/81b6afcfc73b27be",
                        "weight": 100
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/fa86de94973b49a9",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "jenkins.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/fa86de94973b49a9",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.https",
            "module.application_load_balancer.aws_lb_target_group.jenkins_master_https",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "pgadmin_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/pgadmin-http-tg/dbe3fbb29102011b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/897a3c919a695cd7",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "pgadmin.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/897a3c919a695cd7",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e",
            "priority": 5,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.http",
            "module.application_load_balancer.aws_lb_target_group.pgadmin_http",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "pgadmin_https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/pgadmin-https-tg/13308fe65e8ef6ba",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/f894a4f1a46c7165",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "pgadmin.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/f894a4f1a46c7165",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911",
            "priority": 6,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.https",
            "module.application_load_balancer.aws_lb_target_group.pgadmin_https",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "portainer_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-http-tg/93d4e264c65eb87f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/c3f8040228a1ea30",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "portainer.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/c3f8040228a1ea30",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e",
            "priority": 3,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.http",
            "module.application_load_balancer.aws_lb_target_group.portainer_http",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "portainer_https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-https-tg/8d32df104cf15bf2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/b70cdbe95352ac48",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "portainer.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/b70cdbe95352ac48",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911",
            "priority": 4,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.https",
            "module.application_load_balancer.aws_lb_target_group.portainer_https",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "postgres_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/postgres-http-tg/b050a3f9b68ea2be",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/0c773ed762f946d7",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "postgres.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/0c773ed762f946d7",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e",
            "priority": 7,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.http",
            "module.application_load_balancer.aws_lb_target_group.postgres_http",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rust_app_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-app-http-tg/4d48037160e13c56",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/df64234db9fa54e1",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rust-app.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/df64234db9fa54e1",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e",
            "priority": 8,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.http",
            "module.application_load_balancer.aws_lb_target_group.rust_app_http",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rust_app_https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-app-https-tg/52d841fdb185c7ff",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/c4dc3c12731b8be1",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rust-app.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/c4dc3c12731b8be1",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911",
            "priority": 9,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.https",
            "module.application_load_balancer.aws_lb_target_group.rust_app_https",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rust_auth_app_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-auth-app-http-tg/5513ade1ce1e7431",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/52e038d3c32eabab",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rust-auth-app.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/52e038d3c32eabab",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.http",
            "module.application_load_balancer.aws_lb_target_group.rust_auth_app_http",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rust_auth_app_https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-auth-app-https-tg/28bd044e4198030f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/82d0603d914d1e4f",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rust-auth-app.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/82d0603d914d1e4f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911",
            "priority": 11,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.https",
            "module.application_load_balancer.aws_lb_target_group.rust_auth_app_https",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rust_oauth_app_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-oauth-app-http-tg/3e2077daf913fc3f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/cdc7aad561cd6b30",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rust-oauth-app.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/cdc7aad561cd6b30",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e",
            "priority": 12,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.http",
            "module.application_load_balancer.aws_lb_target_group.rust_oauth_app_http",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rust_oauth_app_https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-oauth-app-https-tg/c6b1a13e26a80133",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/d322f4b990a7464c",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rust-oauth-app.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/d322f4b990a7464c",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911",
            "priority": 13,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.https",
            "module.application_load_balancer.aws_lb_target_group.rust_oauth_app_https",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rust_stock_app_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-stock-app-http-tg/57826f5082ee1c01",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/86c381218a0e9e57",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rust-stock-app.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/86c381218a0e9e57",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e",
            "priority": 14,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.http",
            "module.application_load_balancer.aws_lb_target_group.rust_stock_app_http",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rust_stock_app_https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-stock-app-https-tg/b85048b635c9b7db",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/5d06776a5e553a34",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rust-stock-app.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/5d06776a5e553a34",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911",
            "priority": 15,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.https",
            "module.application_load_balancer.aws_lb_target_group.rust_stock_app_https",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rust_uuid_app_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-uuid-app-http-tg/77190ac3b16a95a5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/b80f3eeca6ce2d97",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rust-uuid-app.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e/b80f3eeca6ce2d97",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/269fdfec97344d8e",
            "priority": 16,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.http",
            "module.application_load_balancer.aws_lb_target_group.rust_uuid_app_http",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rust_uuid_app_https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-uuid-app-https-tg/e46a706330068570",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/c4cf813fe6dcfe7b",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rust-uuid-app.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911/c4cf813fe6dcfe7b",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/8e664c77a682801f/11c112424a595911",
            "priority": 17,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.my_alb",
            "module.application_load_balancer.aws_lb_listener.https",
            "module.application_load_balancer.aws_lb_target_group.rust_uuid_app_https",
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins_master_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-master-http-tg/4bb11c5c960d6b3d",
            "arn_suffix": "targetgroup/jenkins-master-http-tg/4bb11c5c960d6b3d",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-master-http-tg/4bb11c5c960d6b3d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-master-http-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jenkins-master-http-tg",
              "Purpose": "Forward from jenkins.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "jenkins-master-http-tg",
              "Purpose": "Forward from jenkins.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins_master_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-master-https-tg/81b6afcfc73b27be",
            "arn_suffix": "targetgroup/jenkins-master-https-tg/81b6afcfc73b27be",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-master-https-tg/81b6afcfc73b27be",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-master-https-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jenkins-master-https-tg",
              "Purpose": "Forward from jenkins.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "jenkins-master-https-tg",
              "Purpose": "Forward from jenkins.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pgadmin_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/pgadmin-http-tg/dbe3fbb29102011b",
            "arn_suffix": "targetgroup/pgadmin-http-tg/dbe3fbb29102011b",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/pgadmin-http-tg/dbe3fbb29102011b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pgadmin-http-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pgadmin-http-tg",
              "Purpose": "Forward from pgadmin.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "pgadmin-http-tg",
              "Purpose": "Forward from pgadmin.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pgadmin_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/pgadmin-https-tg/13308fe65e8ef6ba",
            "arn_suffix": "targetgroup/pgadmin-https-tg/13308fe65e8ef6ba",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/pgadmin-https-tg/13308fe65e8ef6ba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pgadmin-https-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pgadmin-https-tg",
              "Purpose": "Forward from pgadmin.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "pgadmin-https-tg",
              "Purpose": "Forward from pgadmin.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "portainer_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-http-tg/93d4e264c65eb87f",
            "arn_suffix": "targetgroup/portainer-http-tg/93d4e264c65eb87f",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-http-tg/93d4e264c65eb87f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "portainer-http-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "portainer-http-tg",
              "Purpose": "Forward from portainer.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "portainer-http-tg",
              "Purpose": "Forward from portainer.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "portainer_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-https-tg/8d32df104cf15bf2",
            "arn_suffix": "targetgroup/portainer-https-tg/8d32df104cf15bf2",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-https-tg/8d32df104cf15bf2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "portainer-https-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "portainer-https-tg",
              "Purpose": "Forward from portainer.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "portainer-https-tg",
              "Purpose": "Forward from portainer.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "postgres_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/postgres-http-tg/b050a3f9b68ea2be",
            "arn_suffix": "targetgroup/postgres-http-tg/b050a3f9b68ea2be",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/postgres-http-tg/b050a3f9b68ea2be",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "postgres-http-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "postgres-http-tg",
              "Purpose": "Forward from postgres.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "postgres-http-tg",
              "Purpose": "Forward from postgres.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rust_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-app-http-tg/4d48037160e13c56",
            "arn_suffix": "targetgroup/rust-app-http-tg/4d48037160e13c56",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-app-http-tg/4d48037160e13c56",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rust-app-http-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rust-app-http-tg",
              "Purpose": "Forward from rust-app.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "rust-app-http-tg",
              "Purpose": "Forward from rust-app.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rust_app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-app-https-tg/52d841fdb185c7ff",
            "arn_suffix": "targetgroup/rust-app-https-tg/52d841fdb185c7ff",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-app-https-tg/52d841fdb185c7ff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rust-app-https-tg",
            "port": 80,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rust-app-https-tg",
              "Purpose": "Forward from rust-app.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "rust-app-https-tg",
              "Purpose": "Forward from rust-app.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rust_auth_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-auth-app-http-tg/5513ade1ce1e7431",
            "arn_suffix": "targetgroup/rust-auth-app-http-tg/5513ade1ce1e7431",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-auth-app-http-tg/5513ade1ce1e7431",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rust-auth-app-http-tg",
            "port": 81,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rust-auth-app-http-tg",
              "Purpose": "Forward from rust-auth-app.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "rust-auth-app-http-tg",
              "Purpose": "Forward from rust-auth-app.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rust_auth_app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-auth-app-https-tg/28bd044e4198030f",
            "arn_suffix": "targetgroup/rust-auth-app-https-tg/28bd044e4198030f",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-auth-app-https-tg/28bd044e4198030f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rust-auth-app-https-tg",
            "port": 81,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rust-auth-app-https-tg",
              "Purpose": "Forward from rust-auth-app.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "rust-auth-app-https-tg",
              "Purpose": "Forward from rust-auth-app.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rust_oauth_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-oauth-app-http-tg/3e2077daf913fc3f",
            "arn_suffix": "targetgroup/rust-oauth-app-http-tg/3e2077daf913fc3f",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-oauth-app-http-tg/3e2077daf913fc3f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rust-oauth-app-http-tg",
            "port": 82,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rust-oauth-app-http-tg",
              "Purpose": "Forward from rust-oauth-app.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "rust-oauth-app-http-tg",
              "Purpose": "Forward from rust-oauth-app.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rust_oauth_app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-oauth-app-https-tg/c6b1a13e26a80133",
            "arn_suffix": "targetgroup/rust-oauth-app-https-tg/c6b1a13e26a80133",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-oauth-app-https-tg/c6b1a13e26a80133",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rust-oauth-app-https-tg",
            "port": 82,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rust-oauth-app-https-tg",
              "Purpose": "Forward from rust-oauth-app.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "rust-oauth-app-https-tg",
              "Purpose": "Forward from rust-oauth-app.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rust_stock_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-stock-app-http-tg/57826f5082ee1c01",
            "arn_suffix": "targetgroup/rust-stock-app-http-tg/57826f5082ee1c01",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-stock-app-http-tg/57826f5082ee1c01",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rust-stock-app-http-tg",
            "port": 83,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rust-stock-app-http-tg",
              "Purpose": "Forward from rust-stock-app.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "rust-stock-app-http-tg",
              "Purpose": "Forward from rust-stock-app.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rust_stock_app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-stock-app-https-tg/b85048b635c9b7db",
            "arn_suffix": "targetgroup/rust-stock-app-https-tg/b85048b635c9b7db",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-stock-app-https-tg/b85048b635c9b7db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rust-stock-app-https-tg",
            "port": 83,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rust-stock-app-https-tg",
              "Purpose": "Forward from rust-stock-app.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "rust-stock-app-https-tg",
              "Purpose": "Forward from rust-stock-app.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rust_uuid_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-uuid-app-http-tg/77190ac3b16a95a5",
            "arn_suffix": "targetgroup/rust-uuid-app-http-tg/77190ac3b16a95a5",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-uuid-app-http-tg/77190ac3b16a95a5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rust-uuid-app-http-tg",
            "port": 84,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rust-uuid-app-http-tg",
              "Purpose": "Forward from rust-uuid-app.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "rust-uuid-app-http-tg",
              "Purpose": "Forward from rust-uuid-app.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rust_uuid_app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-uuid-app-https-tg/e46a706330068570",
            "arn_suffix": "targetgroup/rust-uuid-app-https-tg/e46a706330068570",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-uuid-app-https-tg/e46a706330068570",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rust-uuid-app-https-tg",
            "port": 84,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rust-uuid-app-https-tg",
              "Purpose": "Forward from rust-uuid-app.aditya-kristianto.com"
            },
            "tags_all": {
              "Name": "rust-uuid-app-https-tg",
              "Purpose": "Forward from rust-uuid-app.aditya-kristianto.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins_master_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-master-http-tg/4bb11c5c960d6b3d-20241214012658173400000013",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-master-http-tg/4bb11c5c960d6b3d",
            "target_id": "10.0.1.114"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.jenkins_master_http",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.jenkins_master.aws_instance.jenkins_master",
            "module.jenkins_master.aws_security_group.jenkins_master_sg",
            "module.jenkins_master.local_file.certificate_file",
            "module.jenkins_master.local_file.jenkins_master_private_key_file",
            "module.jenkins_master.local_file.jenkins_master_public_key_file",
            "module.jenkins_master.tls_private_key.jenkins_master_key",
            "module.jenkins_master.tls_self_signed_cert.jenkins_master",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins_master_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-master-https-tg/81b6afcfc73b27be-20241214012700752200000016",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-master-https-tg/81b6afcfc73b27be",
            "target_id": "10.0.1.114"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.jenkins_master_https",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.jenkins_master.aws_instance.jenkins_master",
            "module.jenkins_master.aws_security_group.jenkins_master_sg",
            "module.jenkins_master.local_file.certificate_file",
            "module.jenkins_master.local_file.jenkins_master_private_key_file",
            "module.jenkins_master.local_file.jenkins_master_public_key_file",
            "module.jenkins_master.tls_private_key.jenkins_master_key",
            "module.jenkins_master.tls_self_signed_cert.jenkins_master",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "pgadmin_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/pgadmin-http-tg/dbe3fbb29102011b-20241214012659709900000014",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/pgadmin-http-tg/dbe3fbb29102011b",
            "target_id": "10.0.1.152"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.pgadmin_http",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "pgadmin_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/pgadmin-https-tg/13308fe65e8ef6ba-20241214012657694400000010",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/pgadmin-https-tg/13308fe65e8ef6ba",
            "target_id": "10.0.1.152"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.pgadmin_https",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "portainer_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-http-tg/93d4e264c65eb87f-20241214012657951800000012",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-http-tg/93d4e264c65eb87f",
            "target_id": "10.0.1.246"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.portainer_http",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.portainer.aws_instance.portainer",
            "module.portainer.aws_security_group.ec2_portainer_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "portainer_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-https-tg/8d32df104cf15bf2-20241214012700398900000015",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-https-tg/8d32df104cf15bf2",
            "target_id": "10.0.1.246"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.portainer_https",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.portainer.aws_instance.portainer",
            "module.portainer.aws_security_group.ec2_portainer_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "postgres_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/postgres-http-tg/b050a3f9b68ea2be-20241214012657909700000011",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/postgres-http-tg/b050a3f9b68ea2be",
            "target_id": "10.0.1.152"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.postgres_http",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rust_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-app-http-tg/4d48037160e13c56-2024121401321911180000001b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-app-http-tg/4d48037160e13c56",
            "target_id": "10.0.1.195"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.rust_app_http",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.rust_app.aws_instance.rust_app",
            "module.rust_app.aws_security_group.ec2_rust_app_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rust_app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-app-https-tg/52d841fdb185c7ff-20241214013219026400000019",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-app-https-tg/52d841fdb185c7ff",
            "target_id": "10.0.1.195"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.rust_app_https",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.rust_app.aws_instance.rust_app",
            "module.rust_app.aws_security_group.ec2_rust_app_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rust_auth_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-auth-app-http-tg/5513ade1ce1e7431-20241214013219450100000020",
            "port": 81,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-auth-app-http-tg/5513ade1ce1e7431",
            "target_id": "10.0.1.195"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.rust_auth_app_http",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.rust_app.aws_instance.rust_app",
            "module.rust_app.aws_security_group.ec2_rust_app_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rust_auth_app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-auth-app-https-tg/28bd044e4198030f-2024121401321942750000001f",
            "port": 444,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-auth-app-https-tg/28bd044e4198030f",
            "target_id": "10.0.1.195"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.rust_auth_app_https",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.rust_app.aws_instance.rust_app",
            "module.rust_app.aws_security_group.ec2_rust_app_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rust_oauth_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-oauth-app-http-tg/3e2077daf913fc3f-2024121401321926840000001c",
            "port": 82,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-oauth-app-http-tg/3e2077daf913fc3f",
            "target_id": "10.0.1.195"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.rust_oauth_app_http",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.rust_app.aws_instance.rust_app",
            "module.rust_app.aws_security_group.ec2_rust_app_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rust_oauth_app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-oauth-app-https-tg/c6b1a13e26a80133-2024121401321930360000001d",
            "port": 445,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-oauth-app-https-tg/c6b1a13e26a80133",
            "target_id": "10.0.1.195"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.rust_oauth_app_https",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.rust_app.aws_instance.rust_app",
            "module.rust_app.aws_security_group.ec2_rust_app_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rust_stock_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-stock-app-http-tg/57826f5082ee1c01-2024121401321906590000001a",
            "port": 83,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-stock-app-http-tg/57826f5082ee1c01",
            "target_id": "10.0.1.195"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.rust_stock_app_http",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.rust_app.aws_instance.rust_app",
            "module.rust_app.aws_security_group.ec2_rust_app_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rust_stock_app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-stock-app-https-tg/b85048b635c9b7db-2024121401321937960000001e",
            "port": 446,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-stock-app-https-tg/b85048b635c9b7db",
            "target_id": "10.0.1.195"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.rust_stock_app_https",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.rust_app.aws_instance.rust_app",
            "module.rust_app.aws_security_group.ec2_rust_app_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rust_uuid_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-uuid-app-http-tg/77190ac3b16a95a5-20241214013220178100000022",
            "port": 84,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-uuid-app-http-tg/77190ac3b16a95a5",
            "target_id": "10.0.1.195"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.rust_uuid_app_http",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.rust_app.aws_instance.rust_app",
            "module.rust_app.aws_security_group.ec2_rust_app_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rust_uuid_app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-uuid-app-https-tg/e46a706330068570-20241214013219494900000021",
            "port": 447,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/rust-uuid-app-https-tg/e46a706330068570",
            "target_id": "10.0.1.195"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.rust_uuid_app_https",
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.rust_app.aws_instance.rust_app",
            "module.rust_app.aws_security_group.ec2_rust_app_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-07d0231dd33eabf8a",
            "description": "Application Load Balancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 82,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 82
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 83,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 83
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 84,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 84
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-07d0231dd33eabf8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "application_load_balancer_security_group",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-application-load-balancer-security_group",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-application-load-balancer-security_group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.certificate_manager.aws_acm_certificate.my_certificate",
            "module.certificate_manager.aws_acm_certificate_validation.my_cert_validation",
            "module.certificate_manager.aws_route53_record.record",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-015ce1b8f0618ad32",
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:instance/i-0baa7b660102922ef",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_instance_profile",
            "id": "i-0baa7b660102922ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-052aa16bb39854585",
            "private_dns": "ip-10-0-1-130.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-050402d7a32499a7d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047767caebe0229a0",
            "tags": {
              "Environment": "dev",
              "Name": "bastion-host",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bastion-host",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca828177a6c1c65d"
            ]
          },
          "dependencies": [
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-0ca828177a6c1c65d",
            "description": "Allow SSM access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0ca828177a6c1c65d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_ssm_security_group",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ec2_ssm_security_group",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2_ssm_security_group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.iam",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-0eae5fa0fb60df689",
            "description": "Allow SSM access",
            "egress": [],
            "id": "sg-0eae5fa0fb60df689",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc_endpoint_security_group",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vpc_endpoint_security_group",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc_endpoint_security_group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c718cb2fa58687f",
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:instance/i-09750869d62bda1d9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_instance_profile",
            "id": "i-09750869d62bda1d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e067589cc1591bdb",
            "private_dns": "ip-10-0-1-114.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08748233bfe201ef9",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047767caebe0229a0",
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-master",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-master",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-061b76d9663ef07ba"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.jenkins_master.aws_security_group.jenkins_master_sg",
            "module.jenkins_master.local_file.certificate_file",
            "module.jenkins_master.local_file.jenkins_master_private_key_file",
            "module.jenkins_master.local_file.jenkins_master_public_key_file",
            "module.jenkins_master.tls_private_key.jenkins_master_key",
            "module.jenkins_master.tls_self_signed_cert.jenkins_master",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-061b76d9663ef07ba",
            "description": "Security group for Jenkins Master EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061b76d9663ef07ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.130/32"
                ],
                "description": "Allow traffic from the Bastion Host security group",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.130/32"
                ],
                "description": "Allows ICMP from the Bastion Host security group",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "jenkins-master-sg",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-master-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-master-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.portainer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "portainer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c718cb2fa58687f",
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:instance/i-0ab9065e056dad87d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_instance_profile",
            "id": "i-0ab9065e056dad87d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c849e20f3450a4c",
            "private_dns": "ip-10-0-1-246.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0076d72c6ae7b30ba",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047767caebe0229a0",
            "tags": {
              "Environment": "dev",
              "Name": "portainer",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "portainer",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0161329926374ed59"
            ]
          },
          "dependencies": [
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.portainer.aws_security_group.ec2_portainer_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.portainer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_portainer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-0161329926374ed59",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0161329926374ed59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.130/32"
                ],
                "description": "Allow traffic from the Bastion Host security group",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.130/32"
                ],
                "description": "Allows ICMP from the Bastion Host security group",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "ec2_portainer_security_group",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ec2_portainer_security_group",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2_portainer_security_group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.postgres",
      "mode": "managed",
      "type": "aws_instance",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c718cb2fa58687f",
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:instance/i-0e7b10993ef493ca9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_instance_profile",
            "id": "i-0e7b10993ef493ca9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0755f37c136ac9da4",
            "private_dns": "ip-10-0-1-152.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04e6c830f1b928aa7",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047767caebe0229a0",
            "tags": {
              "Environment": "dev",
              "Name": "postgres",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "postgres",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed291a27d01dc6c1"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_postgres_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-0ed291a27d01dc6c1",
            "description": "Allow access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed291a27d01dc6c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow traffic from Internal VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allows ICMP from the Internal VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "ec2_postgres_security_group",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ec2_postgres_security_group",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2_postgres_security_group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rust_app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "rust_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c718cb2fa58687f",
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:instance/i-07cc7b2df65a6d74a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_instance_profile",
            "id": "i-07cc7b2df65a6d74a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00648ada777b733c9",
            "private_dns": "ip-10-0-1-195.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b7158ce3f253a807",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047767caebe0229a0",
            "tags": {
              "Environment": "dev",
              "Name": "rust_app",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rust_app",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d777bcd3e2cceb9f"
            ]
          },
          "dependencies": [
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.rust_app.aws_security_group.ec2_rust_app_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.rust_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_rust_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-0d777bcd3e2cceb9f",
            "description": "Allow access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.1.152/32"
                ],
                "description": "Allow outbound traffic to Postgres Instance",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0d777bcd3e2cceb9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 82,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 82
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 83,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 83
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 84,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 84
              },
              {
                "cidr_blocks": [
                  "10.0.1.130/32"
                ],
                "description": "Allow traffic from the Bastion Host security group",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.130/32"
                ],
                "description": "Allows ICMP from the Bastion Host security group",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "ec2_rust_app_security_group",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ec2_rust_app_security_group",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2_rust_app_security_group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion_host.aws_instance.bastion_host",
            "module.bastion_host.aws_security_group.ec2_bastion_host_sg",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.key_pair.aws_key_pair.my_key_pair",
            "module.key_pair.tls_private_key.my_key",
            "module.postgres.aws_instance.postgres",
            "module.postgres.aws_security_group.ec2_postgres_sg",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc",
            "time_sleep.wait"
          ]
        }
      ]
    },
    {
      "module": "module.test3",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_agent_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-0fe9a60cd11dc5786",
            "description": "Security group for Jenkins Agent EC2 instance",
            "egress": [],
            "id": "sg-0fe9a60cd11dc5786",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-agent-sg",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-agent-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-agent-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066e3bbcfb6de4c9f",
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:elastic-ip/eipalloc-066e3bbcfb6de4c9f",
            "domain": "vpc",
            "id": "eipalloc-066e3bbcfb6de4c9f",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-251-117-117.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.117.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eip"
            },
            "tags_all": {
              "Name": "my-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:internet-gateway/igw-0265d2f71206855a3",
            "id": "igw-0265d2f71206855a3",
            "owner_id": "473154593366",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066e3bbcfb6de4c9f",
            "association_id": "eipassoc-0252a5995363d7666",
            "connectivity_type": "public",
            "id": "nat-0b82d68a5006d1fa2",
            "network_interface_id": "eni-07897f0a5ad3b3f80",
            "private_ip": "10.0.101.187",
            "public_ip": "54.251.117.117",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02a1305748bc1c895",
            "tags": {
              "Name": "my-nat"
            },
            "tags_all": {
              "Name": "my-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:route-table/rtb-09e5810de55fddbf5",
            "id": "rtb-09e5810de55fddbf5",
            "owner_id": "473154593366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b82d68a5006d1fa2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:route-table/rtb-008b6323311f825e3",
            "id": "rtb-008b6323311f825e3",
            "owner_id": "473154593366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0265d2f71206855a3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ap_southeast_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070cdb5916d3445b8",
            "route_table_id": "rtb-09e5810de55fddbf5",
            "subnet_id": "subnet-047767caebe0229a0"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_ap_southeast_1a",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ap_southeast_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0071dc1fd95caffed",
            "route_table_id": "rtb-09e5810de55fddbf5",
            "subnet_id": "subnet-0c9a9b369a85d6258"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_ap_southeast_1b",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ap_southeast_1c_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00372672779c4c729",
            "route_table_id": "rtb-09e5810de55fddbf5",
            "subnet_id": "subnet-06c4b2c0ea31291b6"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_ap_southeast_1c",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ap_southeast_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7959b24c4624e48",
            "route_table_id": "rtb-008b6323311f825e3",
            "subnet_id": "subnet-02a1305748bc1c895"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_ap_southeast_1a",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ap_southeast_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051513263e8dc8b18",
            "route_table_id": "rtb-008b6323311f825e3",
            "subnet_id": "subnet-00a2bf78d28978bb4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_ap_southeast_1b",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ap_southeast_1c_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070ad505ede2c8091",
            "route_table_id": "rtb-008b6323311f825e3",
            "subnet_id": "subnet-09d643feae001726a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_ap_southeast_1c",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_ap_southeast_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-047767caebe0229a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047767caebe0229a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-ap-southeast-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-ap-southeast-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_ap_southeast_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-0c9a9b369a85d6258",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9a9b369a85d6258",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-ap-southeast-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-ap-southeast-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_ap_southeast_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-06c4b2c0ea31291b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c4b2c0ea31291b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-ap-southeast-1c",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-ap-southeast-1c",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_ap_southeast_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-02a1305748bc1c895",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a1305748bc1c895",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-ap-southeast-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-ap-southeast-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_ap_southeast_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-00a2bf78d28978bb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a2bf78d28978bb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-ap-southeast-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-ap-southeast-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_ap_southeast_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-09d643feae001726a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d643feae001726a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-ap-southeast-1c",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-ap-southeast-1c",
              "Terraform": "true",
              "kubernetes.io/cluster/jenkins-agent-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a2220c0ba1a8e843"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc/vpc-0a2220c0ba1a8e843",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03eebf036f722e65f",
            "default_route_table_id": "rtb-0a05df613194172bb",
            "default_security_group_id": "sg-09557f5049cb91672",
            "dhcp_options_id": "dopt-0c8460a0e8b4bef2d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a2220c0ba1a8e843",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a05df613194172bb",
            "owner_id": "473154593366",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}